tests/fixtures/invalid/inferred_return_recursive.lby
fn fact n i64
    1 if n <= 1 else n * fact(n - 1)

fn main -> i64
    fact(5)
